# AGENT2

./: .gitignore  .gitmodules  AGENT_DIAGNOSIS_REPORT.md  AGENT_NAME_FIX_DOCUMENTATION.md  CMakeLists.txt  COMPLETE_USAGE_DOCUMENTATION.md.bak  DEPLOYMENT_GUIDE.md  Makefile  PROOF_AGENT_NAME.md  PROOF_AGENT_NAME_UPDATE.md  README.md  TESTING_FRAMEWORK_SUMMARY.md  VALIDATION_SUMMARY.md  agent_name_final_validation.sh  build_agent.sh  build_simple.sh  build_simple_agent.sh  comprehensive_agent_name_test.sh  comprehensive_attack_simulation.sh  comprehensive_e2e_validation.sh  comprehensive_final_validation.sh  comprehensive_integration_test.sh  comprehensive_network_detection_test.sh  corrected_e2e_validation.sh  debug_check.sh  demo_active_response.sh  deploy_real_binaries.sh  documentation_guide.sh  documentation_guide.sh.bak  enhanced_agent_integration.sh  enhanced_ssh_test.sh  extraction_summary.sh  final_demonstration.sh  final_security_demonstration.sh  final_validation_report.sh  final_validation_test.sh  fix_agent_integration.sh  fixed_e2e_validation.sh  isolated_agent_comprehensive_test.sh  manager_communication_nmap_test.sh  (+40 more)
MANAGER/: wazuh-manager-control
MANAGER/etc/: client.keys  ossec.conf  root-ca-key.pem  sslmanager.cert  sslmanager.key  wazuh-key.pem  wazuh.pem  wpk_root.pem
MANAGER/etc/shared/default/: agent.conf
MANAGER/ruleset/decoders/: 0100-network-filesystem-decoders.xml
MANAGER/ruleset/rules/: 0001-core-rules.xml  0100-network-filesystem.xml
backup/sca_ruleset/original/generic/: network_filesystem_security.yml
backup/sca_ruleset/original/ubuntu/: ubuntu_network_fs.yml
docs/: COMPLETE_UPGRADE_DOCUMENTATION.md  COMPLETE_USAGE_DOCUMENTATION.md  COMPREHENSIVE_GAP_ANALYSIS.md  FINAL_TESTING_CHECKLIST.md  IMPLEMENTATION_PLAN.md  TESTING_STRATEGY.md  wazuh_cheat_sheet.sh
etc/: agent.identity  agent.identity.backup  agent.identity.backup.1757778261  client.keys  client.keys.backup.1757762781  client.keys.backup.1757777070  ossec-agent.conf  ossec-manager.conf.backup  ossec.conf  ossec.conf.backup  ossec.conf.template
etc/shared/: aws_credentials  azure_auth.json  gcp_credentials.json  rootkit_files.txt  rootkit_trojans.txt  system_audit_rcl.txt
etc/shared/cve/: cve_database.json  package_vulnerabilities.txt  package_vulns.txt  severity_rules.txt
lib/: agent_identity.sh
queue/ar/: ssh_attack.req  test_alert.req  test_block.req
queue/logcollector/: file_status.json
queue/rids/: sender_counter
queue/sockets/: .agent_info
queue/vulnerabilities/: scan_results.json  scan_summary.json
queue/vulnerabilities/reports/: detailed_report_20250912_124255.md  detailed_report_20250912_124330.md  executive_summary_20250912_124255.md  executive_summary_20250912_124330.md  latest_detailed_report.md  latest_executive_summary.md  latest_vulnerabilities.csv  package_priority_20250912_124255.txt  package_priority_20250912_124330.txt  vulnerabilities_20250912_124255.csv
ruleset/sca/: cis_ubuntu_linux.yml  network_hardening.yml
scripts/: proof_update_agent_name.sh
src/: Config.OS  Makefile  disable-account  firewall-drop  firewalld-drop  host-deny  ip-customblock  ipfw  kaspersky  manage_agents  npf  pf  restart-wazuh  route-null  wazuh-modulesd  wazuh-slack
src/client-agent/: main.c
src/engine/source/: main.cpp
src/init/: replace_manager_ip.sh  shared.sh
src/shared_modules/dbsync/tests/interface/: test_inputs.h
src/shared_modules/http-request/include/: HTTPRequest.hpp  IURLRequest.hpp  UNIXSocketRequest.hpp
src/shared_modules/http-request/src/: HTTPRequest.cpp  IRequestImplementator.hpp  UNIXSocketRequest.cpp  curlWrapper.hpp  factoryRequestImplemetator.hpp  urlRequest.hpp
src/shared_modules/http-request/test/benchmark/: main.cpp
src/shared_modules/http-request/test/component/: component_test.cpp
src/shared_modules/http-request/test/unit/: unit_test.cpp
src/shared_modules/http-request/test/unit/mocks/: MockRequestImplementator.hpp
src/shared_modules/keystore/src/: argsParser.hpp
src/util/: wazuh-regex.c
src/wazuh_modules/: main.c
src/win32/: setup-iis.c  win_service.c
src/win32/ui/: common.c
test/: README.md  run_all_tests.sh  validate_framework.sh
test/alerts/: test_alerts.sh
test/core/: test_startup.sh
test/features/active-response/: test_active_response.sh
test/features/cloud/: test_cloud.sh
test/features/fim/: test_fim.sh
test/features/integration/: test_integration.sh
test/features/log-analysis/: test_log_analysis.sh
test/features/name-change/: comprehensive_test.sh
test/features/name-change/backup/: ossec.conf.1757778146
test/features/performance/: test_performance.sh
test/features/rootkit/: test_rootkit.sh
test/features/sca/: test_sca.sh
test/features/sca/logs/: sca_alert_analysis.json  sca_check_list.txt
test/features/sca/results/: alert_summary.txt  sca_comprehensive_test_report.txt  summary.txt
test/features/sca/results/simulated/: sca_scan_simulation.json
test/features/vuln-scan/: test_vuln_scan.sh
test/logs/fim/: fim_test_results.txt
test/logs/log-analysis/: log_analysis_results.txt
test/report/: comprehensive_test_report.html  comprehensive_test_report.txt
test/report/archive/20250912_143408/core/: core_test_results.txt
test/report/archive/20250912_143408/sca/: sca_test_results.txt
test/utils/: test_lib.sh
tools/: fix-wazuh-indexer-dns.sh
